[project]
name = "kozaappai"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuraiKeksik",email = "samuraikeksik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
